Fix margins for news section on narrow viewports

--- a/css/index.css
+++ b/css/index.css
@@ -440,6 +440,11 @@ aside::before {
   margin-top: 3em;
 }
 
+#news p {
+  margin-left: 1.5rem;
+margin-right: 0.5rem;
+}
+
 /********************************************************************************
  *                                                                              *
  *                                   Highlights                                 *
